--- a/simConfig.cfg
+++ b/simConfig.cfg
@@ -1,1 +1,1 @@
-{"events":[{"time":1000,"type":"PLAYER_JOIN","duration":26282}],"timeLimit":60000,"delay":1000}
+{"events":[{"time":1000,"type":"PLAYER_JOIN","duration":20000},{"time":4000,"type":"PLAYER_JOIN","duration":20000}],"timeLimit":30000,"delay":1000}
