Ex E2 - collections for building entities

--- a/app-engine-flex/pom.xml
+++ b/app-engine-flex/pom.xml
@@ -61,11 +61,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>3.3.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>redis.clients</groupId>-->
+<!--            <artifactId>jedis</artifactId>-->
+<!--            <version>3.3.0</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.eclipse.jetty.websocket</groupId>
