--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>objectis</artifactId>
             <version>0.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.raylabz</groupId>
+            <artifactId>objectis</artifactId>
+            <version>0.1.7</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
